fix(web-components): updated styling to fix tooltip positioning
posiion:relative on the ic-input-* elements were pushing the tooltip out of place. The position
property has been removed from parents and added to the direct parent of the buttons where
applicable

--- a/packages/web-components/src/components/ic-input-component-container/ic-input-component-container.css
+++ b/packages/web-components/src/components/ic-input-component-container/ic-input-component-container.css
@@ -12,7 +12,6 @@ ic-input-component-container {
   padding: 1px;
   background-color: var(--ic-architectural-white);
   box-sizing: border-box;
-  position: relative;
   fill: var(--ic-architectural-400);
   outline: none;
 }
